<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appThemeColor"
        android:gravity="center"
        android:text="@string/RecipeModuleTitle"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Place Link Here"
        android:textColorLink="@color/appThemeColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLinkDirection" />

    <TextView
        android:id="@+id/tvRecipeName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="RecipeName"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ivRecipe"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/ivRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/ic_app_logo_small" />

    <TextView
        android:id="@+id/tvIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvIngredients"
        android:textColor="@color/appThemeColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLink" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvIngredients"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIngredients" />

    <TextView
        android:id="@+id/tvNutrients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNutrients"
        android:textColor="@color/appThemeColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvIngredients" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNutrients"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNutrients" />

    <TextView
        android:id="@+id/tvLinkDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TvLink"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRecipe" />

    <CheckBox
        android:id="@+id/cbLiked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbLiked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvNutrients"
        android:buttonTint="@color/appThemeColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>