<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration_2"
    android:orientation="vertical"
    android:background="@drawable/custom_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_app_logo_reg_page"
            android:contentDescription="@string/app_logo_description"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            app:layout_constraintTop_toBottomOf="@id/logo"
            android:id="@+id/regcaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/registration_caption"
            android:contentDescription="@string/app_logo_description" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_fitness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration2_btns_margin"
            android:layout_marginLeft="@dimen/registration2_btns_margin"
            android:layout_marginRight="@dimen/registration2_btns_margin"
            card_view:cardCornerRadius="@dimen/registration2_card_radius"
            android:background="#424242">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/fitness"
                android:background="@color/registrationBtnsColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ff_weights" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fitness_lbl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitness_cardview_lbl_text"
            android:textSize="@dimen/cardview_caption_size"
            android:layout_gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_macros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration2_btns_margin"
            android:layout_marginLeft="@dimen/registration2_btns_margin"
            android:layout_marginRight="@dimen/registration2_btns_margin"
            card_view:cardCornerRadius="@dimen/registration2_card_radius"
            android:background="#424242">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/macros"
                android:background="@color/registrationBtnsColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ff_macros" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/macros_lbl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/macros_cardview_lbl_text"
            android:textSize="@dimen/cardview_caption_size"
            android:layout_gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_gym_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration2_btns_margin"
            android:layout_marginLeft="@dimen/registration2_btns_margin"
            android:layout_marginRight="@dimen/registration2_btns_margin"
            card_view:cardCornerRadius="@dimen/registration2_card_radius"
            android:background="#424242">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/gym_maps"
                android:background="@color/registrationBtnsColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ff_gym"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/gym_maps_lbl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gym_maps_cardview_lbl_text"
            android:textSize="@dimen/cardview_caption_size"
            android:layout_gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration2_btns_margin"
            android:layout_marginLeft="@dimen/registration2_btns_margin"
            android:layout_marginRight="@dimen/registration2_btns_margin"
            card_view:cardCornerRadius="@dimen/registration2_card_radius"
            android:background="#424242">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/recipes"
                android:background="@color/registrationBtnsColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ff_recipe"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/recipes_lbl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes_cardview_lbl_text"
            android:textSize="@dimen/cardview_caption_size"
            android:layout_gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_reminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/registration2_btns_margin"
            android:layout_marginLeft="@dimen/registration2_btns_margin"
            android:layout_marginRight="@dimen/registration2_btns_margin"
            card_view:cardCornerRadius="@dimen/registration2_card_radius"
            android:background="#424242">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/reminders"
                android:background="@color/registrationBtnsColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ff_reminder2" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/reminders_lbl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminders_cardview_lbl_text"
            android:textSize="@dimen/cardview_caption_size"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/button_minimum_width_registration1"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/custom_button"
            android:text="@string/submit_btn_text"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>